openobserve/o2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: openobserve
  namespace: openobserve
spec:
  selector:
    app: openobserve
  ports:
  - { name: http, port: 5080, targetPort: 5080 }
  - { name: grpc, port: 5081, targetPort: 5081 }
